# hci-bildung

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  nginx.conf  package-lock.json  package.json
.github/workflows/: build_status.yml
assets/js/: modal.js  nav.js  validation.js
db_scripts/: setup.sql
deployment/: launch_server.sh
deployment/nginx/: Dockerfile
migrations/2022-03-04-212722_initial_db/: down.sql  up.sql
migrations/2022-03-29-155815_trash_sheets/: down.sql  up.sql
migrations/2022-04-03-121238_roles/: down.sql  up.sql
migrations/2022-04-05-172719_student_solutions/: down.sql  up.sql
public/: docmgmt.html  index.html
src/: App.vue  crypt.rs  flash.rs  lib.rs  main.rs  schema.rs  session.rs  sheets.rs  status.rs  storage.ts  templating.rs  validation.rs
src/components/: EditView.vue  MenuBar.vue  SaveStatus.vue  ShareButton.vue  Sheet.vue  StudentView.vue  Tiptap.vue
src/components/marks/: BoldMark.vue  GapMark.vue  ItalicMark.vue  Marking.vue
src/components/nodes/: BulletlistNode.vue  CodeblockNode.vue  DocNode.vue  HeadingNode.vue  Node.vue  OrderedlistNode.vue  ParagraphNode.vue
src/db/: mod.rs  model.rs  schema.rs  setup.rs  sql_types.rs
src/landing_page/: routes.rs
src/login/: data.rs  guards.rs  logic.rs  mod.rs  routes.rs  transport.rs
src/marks/: Gap.ts
src/node/: Audio.ts  AudioPopup.vue
src/nodes/: Audio.ts
src/sheet/: data.rs  logic.rs  mod.rs  routes.rs  transport.rs
src/sheets/: mod.rs  transport.rs
src/sheets/data/: mod.rs  sheet.rs  solution.rs
src/sheets/logic/: mod.rs  sheet.rs  solution.rs
src/sheets/routes/: mod.rs  sheet.rs  sheet_tree.rs  solution.rs  solutions.rs
templates/: demo.html.tera  docmgmt.html.tera  landing_page.html.tera  login.html.tera  sheet.html.tera  vue.html.tera
templates/forms/: form_field.html.tera
templates/generic/: base.html.tera  macros.html.tera  nav.html.tera  symbols.html.tera  table.html.tera
templates/management/: base.html.tera  sidebar.html.tera
templates/management/overview/: base.html.tera  student.html.tera  teacher.html.tera
templates/sheet/: base.html.tera  edit_sheet.html.tera  view_sheet.html.tera
templates/sheet_management/: active_sheets_base.html.tera  base.html.tera  my_sheets.html.tera  recent_sheets.html.tera  sidebar.html.tera  trash.html.tera
templates/solution_management/: base.html.tera  sheet_solutions.html.tera
vue/: .env.dev-standalone  package-lock.json  package.json  tsconfig.json  vue.config.js
vue/public/: index.html  sheet.html.tera  vue_macros.html.tera
vue/src/: App.vue  enums.ts  main.ts  storage.ts
vue/src/components/: DemoView.vue  (+14 more)
(+53 files in other folders)
