[package]
name = "hci-bildung"
version = "0.1.0"
authors = ["Florian Lercher <florian.lercher@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
diesel_migrations = "1.3"
fern = "0.5"
log = "0.4"
rand = "0.8.4"
rust-crypto = "^0.2"
serde = "1.0.136"
serde_json = "1.0"
tera = "^1.15.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.3"
features = ["chrono", "postgres", "r2d2", "serde_json", "uuidv07"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets", "uuid"]

[dependencies.postgres-types]
version = "0.2.2"
features = ["derive", "with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]
